changing description in meta attr

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,17 +3,20 @@ import Layout from "../layouts/Layout.astro";
 import Categories from "../components/Categories.astro";
 import Main from "../components/Main.astro";
 import Brand from "../components/Brand.astro";
- 
+
 import Principles from "../components/Principles.astro";
 ---
 
-<Layout title="Industrias Mar y Sol">
+<Layout
+  title="Industrias Mar y Sol"
+  description="Industrias Mar y Sol S.A. fabrica productos de limpieza de excelente calidad y precios competitivos que benefician la salud y el bienestar de nuestros consumidores."
+>
   <Main />
 
   <Brand />
 
   <Categories />
-  
+
   <Principles />
 </Layout>
 
