--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -2,16 +2,17 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Industrias Mar y Sol | Productos">
+<Layout title="Industrias Mar y Sol | Productos" description="Industrias Mar y Sol provee de los productos de limpieza que no pueden faltar en el hogar y empresa, tales como limpiadores, desinfectantes, quitamanchas y desengrasantes. Ademas tenemos una línea de productos de limpieza para autos tales como desengrasantes y Shampoo">
   <section class="page mt-32 px-4 md:px-24 pb-16">
-    <h2 class="font-bold text-5xl mb-16 text-center text-eight">Nuestros productos</h2>
+    <h2 class="font-bold text-5xl mb-16 text-center text-eight">
+      Nuestros productos
+    </h2>
 
     <ul class="grid grid-flow-row grid-cols-1 md:grid-cols-3 gap-16 mb-4">
-
       <li class="rounded shadow-md" title="Ácido saca-sarro Chelox">
         <img
           src="/images/products/acido-nitrico-chelox.png"
-          class="rounded-t-lg "
+          class="rounded-t-lg"
           alt="Ácido saca-sarro Chelox"
           decoding="async"
           loading="lazy"
@@ -19,10 +20,9 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">&Aacute;cido nítrico</h3>
-          <p class="font-light text-sm mb-2"> 
-          </p>
+          <p class="font-light text-sm mb-2"></p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </section>
       </li>
@@ -38,10 +38,9 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">&Aacute;cido sacasarro</h3>
-          <p class="font-light text-sm mb-2"> 
-          </p>
+          <p class="font-light text-sm mb-2"></p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </section>
       </li>
@@ -57,11 +56,11 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">Alcohol antibacterial</h3>
-          <p class="font-light text-sm mb-2"> 
+          <p class="font-light text-sm mb-2">
             Presentaciones: caneca, galón y litro, 500ml y sachet 280ml.
           </p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </section>
       </li>
@@ -77,14 +76,12 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">Jabón de tocador</h3>
-          <p class="font-light text-sm mb-2"> </p>
+          <p class="font-light text-sm mb-2"></p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </section>
       </li>
-
- 
 
       <li class="rounded shadow-md" title="Cloro Chelox">
         <img
@@ -97,11 +94,11 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">Cloro</h3>
-          <p class="font-light text-sm mb-2"> 
+          <p class="font-light text-sm mb-2">
             Presentaciones: galón, botella 1000ml, botella 500ml y sachet 280ml.
           </p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </section>
       </li>
@@ -117,14 +114,16 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">Desinfectante</h3>
-          <p class="font-light text-sm "> 
-            Fragancias: lavanda, floral, manzana, canela, fresa, hawai, baby y eucalipto.
+          <p class="font-light text-sm">
+            Fragancias: lavanda, floral, manzana, canela, fresa, hawai, baby y
+            eucalipto.
           </p>
-          <p class="font-light text-sm mb-2"> 
-            Presentaciones: caneca, galón, botella 1000ml, botella 500ml y sachet 250ml
+          <p class="font-light text-sm mb-2">
+            Presentaciones: caneca, galón, botella 1000ml, botella 500ml y
+            sachet 250ml
           </p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </section>
       </li>
@@ -140,11 +139,12 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">Detergente líquido</h3>
-          <p class="font-light text-sm mb-2"> 
-            Presentaciones: caneca, galón, botella 1000ml, botella 500ml y sachet 280ml
+          <p class="font-light text-sm mb-2">
+            Presentaciones: caneca, galón, botella 1000ml, botella 500ml y
+            sachet 280ml
           </p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </section>
       </li>
@@ -160,9 +160,9 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">Shampoo para autos Chelox</h3>
-          <p class="font-light text-sm mb-2"> </p>
+          <p class="font-light text-sm mb-2"></p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </section>
       </li>
@@ -178,9 +178,9 @@ import Layout from "../layouts/Layout.astro";
 
         <section class="p-4">
           <h3 class="font-semibold">Brillo silicona Chelox</h3>
-          <p class="font-light text-sm mb-2"> </p>
+          <p class="font-light text-sm mb-2"></p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </section>
       </li>
@@ -196,11 +196,9 @@ import Layout from "../layouts/Layout.astro";
 
         <div class="p-4">
           <h3 class="font-semibold">Suavizante</h3>
-          <p class="font-light text-sm mb-2"> 
-             
-          </p>
+          <p class="font-light text-sm mb-2"></p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </div>
       </li>
@@ -216,14 +214,12 @@ import Layout from "../layouts/Layout.astro";
 
         <div class="p-4">
           <h3 class="font-semibold">Brillo llantas</h3>
-          <p class="font-light text-sm mb-2"> 
-          </p>
+          <p class="font-light text-sm mb-2"></p>
           <p class="font-light text-xs text-two">
-            Comun&iacute;quese con nosotros para mayor informaci&oacute;n 
+            Comun&iacute;quese con nosotros para mayor informaci&oacute;n
           </p>
         </div>
       </li>
-
     </ul>
   </section>
 </Layout>
