--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,14 @@
 ---
 import Header from "../components/header.astro";
-import Footer from "../components/footer.astro"; 
+import Footer from "../components/footer.astro";
 import "../base.css";
 
 interface Props {
   title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
@@ -16,25 +17,17 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <meta
-      name="description"
-      content="Industrias Mar y Sol S.A. fabrica productos de limpieza de excelente calidad y precios competitivos que benefician la salud y el bienestar de nuestros consumidores."
-    />
-    <meta property="og:title" content="Industrias Mar y Sol S.A." />
-    <meta
-      property="og:description"
-      content="Industrias Mar y Sol S.A. fabrica productos de limpieza de excelente calidad y precios competitivos que benefician la salud y el bienestar de nuestros consumidores."
-    />
+    <meta name="description" content={description} />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
     <meta property="og:image" content="favicon.ico" />
     <meta property="og:image:alt" content="Industrias Mar y Sol S.A." />
     <meta name="theme-color" content="blue" />
     <title>{title}</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    
   </head>
   <body>
-    <Header />
-
+    <Header /> 
     <slot />
     <Footer />
   </body>
@@ -60,8 +53,6 @@ const { title } = Astro.props;
     animation-timeline: view();
     animation-range: entry 50% cover 50%;
   }
-
-
 
   @keyframes fade {
     from {
