--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,10 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Industrias Mar y Sol | Nosotros">
+<Layout
+  title="Industrias Mar y Sol | Nosotros"
+  description="Industría Ecuatoriana localizada en Santa Helena que provee productos de limpieza para el hogar, empresa y autos."
+>
   <section class="page mt-32 px-4 md:px-16 pb-16 text-eight">
     <ul
       class="grid grid-flow-row grid-cols-1 md:grid-cols-2 gap-8 justify-center items-center"
