--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,17 +2,19 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Industrias Mar y Sol | Contacto">
+<Layout
+  title="Industrias Mar y Sol | Contacto"
+  description="Para más información nos pueden contactar a nuestra línea telefónica (+593) 096 855 6501"
+>
   <section class="page mt-32 px-4 md:px-16 pb-16">
     <h2 class="font-bold text-5xl mb-12 text-center text-eight">Contáctanos</h2>
 
     <div class="grid grid-flow-row grid-cols-1 md:grid-cols-2 gap-6">
       <article>
-
         <div class="font-semibold text-2xl text-eight">
-          
           <p class="font-light">Línea telefónica</p>
-          <p>(+593) 096 855 6501</p></div>
+          <p>(+593) 096 855 6501</p>
+        </div>
 
         <form class="flex flex-col gap-6 hidden">
           <input
@@ -20,7 +22,7 @@ import Layout from "../layouts/Layout.astro";
             class="rounded-md border-2 border-four py-3 px-2 text-eight focus:text-eight"
             id="InputEmail"
             aria-describedby="emailHelp"
-            placeholder="Correo electronico"
+            placeholder="Correo electrónico"
           />
 
           <input
@@ -37,7 +39,11 @@ import Layout from "../layouts/Layout.astro";
             placeholder="Mensaje"></textarea>
 
           <div class="flex items-center justify-center">
-            <button type="submit" class="bg-seven rounded py-3 text-one w-48  font-semibold" aria-label="Send">
+            <button
+              type="submit"
+              class="bg-seven rounded py-3 text-one w-48 font-semibold"
+              aria-label="Send"
+            >
               Enviar
             </button>
           </div>
@@ -49,8 +55,8 @@ import Layout from "../layouts/Layout.astro";
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.8056707586634!2d-80.86168768582661!3d-2.226705138001533!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902e09067bf3a8ad%3A0xf2101f90ca3fbc6d!2sBarrio%20Amantes%20De%20Sumpa!5e0!3m2!1sen!2snz!4v1585956538160!5m2!1sen!2snz"
             width="100%"
-            height="450"  
-            aria-hidden="false" 
+            height="450"
+            aria-hidden="false"
             title="map"></iframe>
         </div>
       </article>
