adding keywords meta tag

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Industrias Mar y Sol | 404" description="Página web no encontrada">
+<Layout title="Industrias Mar y Sol | 404" description="Página web no encontrada" keywords="">
   <section class="errorpage">
     <p>Página web no encontrada</p>
   </section>
