--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -2,7 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Industrias Mar y Sol | Productos" description="Industrias Mar y Sol provee de los productos de limpieza que no pueden faltar en el hogar y empresa, tales como limpiadores, desinfectantes, quitamanchas y desengrasantes. Ademas tenemos una línea de productos de limpieza para autos tales como desengrasantes y Shampoo">
+<Layout
+  title="Industrias Mar y Sol | Nuestros productos"
+  description="Industrias Mar y Sol provee de los productos de limpieza que no pueden faltar en el hogar y empresa, tales como limpiadores, desinfectantes, quitamanchas y desengrasantes. Ademas tenemos una línea de productos de limpieza para autos tales como desengrasantes y Shampoo"
+  keywords="acido nitrico, chelox, acido sacasarro, Alcohol antibacterial, Jabón de tocador, desinfectante, fragancias, lavanda, floral, manzana, canela, fresa, hawai, eucalipto"
+>
   <section class="page mt-32 px-4 md:px-24 pb-16">
     <h2 class="font-bold text-5xl mb-16 text-center text-eight">
       Nuestros productos
@@ -103,11 +107,11 @@ import Layout from "../layouts/Layout.astro";
         </section>
       </li>
 
-      <li class="rounded shadow-md" title="Desifectante Chelox">
+      <li class="rounded shadow-md" title="Desinfectante Chelox">
         <img
           src="/images/products/desifectante-chelox.png"
           class="rounded-t-lg"
-          alt="Desifectante Chelox"
+          alt="Desinfectante Chelox"
           decoding="async"
           loading="lazy"
         />
