--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,14 +1,17 @@
 ---
 import Header from "../components/header.astro";
 import Footer from "../components/footer.astro";
+import Seo from "../components/Seo.astro";
+import siteData from "../data/siteData.json";
 import "../base.css";
 
 interface Props {
   title: string;
   description: string;
+  keywords: string;
 }
 
-const { title, description } = Astro.props;
+const { title, description, keywords } = Astro.props;
 ---
 
 <!doctype html>
@@ -16,18 +19,15 @@ const { title, description } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <meta name="description" content={description} />
-    <meta property="og:title" content={title} />
-    <meta property="og:description" content={description} />
-    <meta property="og:image" content="favicon.ico" />
-    <meta property="og:image:alt" content="Industrias Mar y Sol S.A." />
+    <meta name="generator" content={Astro.generator} /> 
     <meta name="theme-color" content="blue" />
+    <Seo {siteData} {title} {description} {keywords}/>
     <title>{title}</title>
+
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   </head>
   <body>
-    <Header /> 
+    <Header />
     <slot />
     <Footer />
   </body>
