--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,8 +3,9 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout
-  title="Industrias Mar y Sol | Nosotros"
+  title="Industrias Mar y Sol | Acerca de nosotros"
   description="Industría Ecuatoriana localizada en Santa Helena que provee productos de limpieza para el hogar, empresa y autos."
+  keywords="Industría Ecuatoriana, productos de limpieza para el hogar, empresa y autos"
 >
   <section class="page mt-32 px-4 md:px-16 pb-16 text-eight">
     <ul
