--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,8 +3,9 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout
-  title="Industrias Mar y Sol | Contacto"
+  title="Industrias Mar y Sol | Contáctenos"
   description="Para más información nos pueden contactar a nuestra línea telefónica (+593) 096 855 6501"
+  keywords="indumarsa, Santa Helena, Ecuador, Guayaquil, Contáctanos, Línea telefónica"
 >
   <section class="page mt-32 px-4 md:px-16 pb-16">
     <h2 class="font-bold text-5xl mb-12 text-center text-eight">Contáctanos</h2>
