adding keywords meta tag

--- a/src/components/Seo.astro
+++ b/src/components/Seo.astro
@@ -20,6 +20,8 @@ const jsonLD = jsonLDGenerator({
 <link rel="canonical" href={url} />
 
 <!-- Open Graph -->
+<meta property="og:locale" content="es_ES" />
+<meta property="og:type" content="website" />
 <meta property="og:site_name" content={site_name} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
