--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import Principles from "../components/Principles.astro";
 ---
 
 <Layout
-  title="Industrias Mar y Sol"
+  title="Industrias Mar y Sol | Fabricantes de productos de limpieza"
   description="Industrias Mar y Sol S.A. fabrica productos de limpieza de excelente calidad y precios competitivos que benefician la salud y el bienestar de nuestros consumidores."
-  keywords="Fabrica de productos de limpieza, desengrasante, limpieza del hogar, fabricantes de productos de limpieza, productos de uso cosmético, doméstico, institucional e industrial, produccion de quimicos, Ecuador"
+  keywords="Fabrica de productos de limpieza, desengrasante, limpieza del hogar, fabricantes de productos de limpieza, productos de uso cosmético, doméstico, institucional e industrial, produccion de quimicos, Proveedores de productos de limpieza, Productos de limpieza al por mayor, Ecuador"
 >
   <Main />
 
