--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout
   title="Industrias Mar y Sol | Nuestros productos"
   description="Industrias Mar y Sol provee de los productos de limpieza que no pueden faltar en el hogar y empresa, tales como limpiadores, desinfectantes, quitamanchas y desengrasantes. Ademas tenemos una línea de productos de limpieza para autos tales como desengrasantes y Shampoo"
-  keywords="acido nitrico, chelox, acido sacasarro, Alcohol antibacterial, Jabón de tocador, desinfectante, fragancias, lavanda, floral, manzana, canela, fresa, hawai, eucalipto"
+  keywords="acido nitrico, chelox, acido sacasarro, Alcohol antibacterial, Jabón de tocador, desinfectante, fragancias, lavanda, floral, manzana, canela, fresa, hawai, eucalipto, antibacterial"
 >
   <section class="page mt-32 px-4 md:px-24 pb-16">
     <h2 class="font-bold text-5xl mb-16 text-center text-eight">
@@ -13,11 +13,11 @@ import Layout from "../layouts/Layout.astro";
     </h2>
 
     <ul class="grid grid-flow-row grid-cols-1 md:grid-cols-3 gap-16 mb-4">
-      <li class="rounded shadow-md" title="Ácido saca-sarro Chelox">
+      <li class="rounded shadow-md" title="Ácido nitrico Chelox">
         <img
           src="/images/products/acido-nitrico-chelox.png"
           class="rounded-t-lg"
-          alt="Ácido saca-sarro Chelox"
+          alt="Ácido nitrico Chelox"
           decoding="async"
           loading="lazy"
         />
